--- a/index.html
+++ b/index.html
@@ -375,13 +375,26 @@
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 				  </a>
 				</span>
-				<h4 class="service-heading">Github</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<h4 class="service-heading">Github</h4><br><br>
+				<div class="col-md-1">
+				</div>
+				<div class="col-md-10">
+				  <hr class="fancy">
+				  <div class="col-md-2">
+				  </div>
+				  <div class="col-md-8">
+					<hr class="fancy">
+				  </div>
+				  <div class="col-md-2">
+				  </div>
+				</div>
+				<div class="col-md-1">
+				</div>
 			  </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                       <i class="fa fa-circle fa-stack-2x text-primary"></i>
-					  <a href="mailto:alex.khouderchah@gmail.com?Subject=Hello%20Alex" target="_top">
+					  <a href="mailto:alex.khouderchah@gmail.com?Subject=Hello%20Alex">
                         <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
 					  </a>
                     </span>
@@ -395,8 +408,21 @@
                       <i class="fa fa-download fa-stack-1x fa-inverse"></i>
 					</a>
                   </span>
-                  <h4 class="service-heading">Résumé</h4>
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                  <h4 class="service-heading">Résumé</h4><br><br>
+				  <div class="col-md-1">
+				  </div>
+				  <div class="col-md-10">
+					<hr class="fancy">
+					<div class="col-md-2">
+					</div>
+					<div class="col-md-8">
+					  <hr class="fancy">
+					</div>
+					<div class="col-md-2">
+					</div>
+				  </div>
+				  <div class="col-md-1">
+				  </div>
                 </div>
             </div>
         </div>
@@ -465,7 +491,8 @@
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; Alex Khouderchah 2017</span>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
+				  <!--
                     <ul class="list-inline social-buttons">
                         <li><a href="http://www.github.com/Khouderchah-Alex"><i class="fa fa-github"></i></a>
                         </li>
@@ -474,6 +501,7 @@
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
+					-->
                 </div>
             </div>
         </div>
@@ -500,18 +528,16 @@
                                 <h2>Tetrad Game Engine</h2>
                                 <p class="item-intro text-muted">3D game engine using an entity-component-system architecture</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+								<ul class="list-inline">
+                                  <li>Date: July 2014</li>
+                                  <li>Client: Round Icons</li>
+                                  <li>Category: Graphic Design</li>
+                                </ul>
                                 <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture.</p>
 								<ul class="list-inline social-buttons">
 								  <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
 								  </li>
 								</ul>
-                                <p>
-                                    <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                                <ul class="list-inline">
-                                    <li>Date: July 2014</li>
-                                    <li>Client: Round Icons</li>
-                                    <li>Category: Graphic Design</li>
-                                </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -535,8 +561,8 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Heading</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2>Reliable Data-Transfer Protocol</h2>
+                                <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
                                 <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
                                 <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
@@ -564,8 +590,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2>Remote Shell</h2>
+                                <p class="item-intro text-muted">Simple client and server implementation of remote shell on Linux</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
                                 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
@@ -593,8 +619,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2>CNN using OpenCL on GPUs</h2>
+                                <p class="item-intro text-muted">Optimization of sequential CNN implementation using OpenCL for execution on GPUs</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
                                 <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
