--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <div class="container">
           <div class="intro-text">
 			<div class="intro-heading">Alex Khouderchah</div>
+			<div class="intro-spacing"></div>
             <div class="intro-lead-in">/*&ensp; Software Engineer<br>Computer Scientist&ensp; */</div>
             <a href="#contact" class="page-scroll btn btn-xl">Contact Info</a>
             </div>
@@ -399,7 +400,8 @@
 					  </a>
                     </span>
                     <h4 class="service-heading">Email</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+					  I am always on the lookout for new and interesting opportunities. Feel free to contact me!</p>
                 </div>
                 <div class="col-md-4">
 				  <span class="fa-stack fa-4x">
@@ -528,12 +530,29 @@
                                 <h2>Tetrad Game Engine</h2>
                                 <p class="item-intro text-muted">3D game engine using an entity-component-system architecture</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+								<!--
 								<ul class="list-inline">
                                   <li>Date: July 2014</li>
                                   <li>Client: Round Icons</li>
                                   <li>Category: Graphic Design</li>
                                 </ul>
-                                <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture.</p>
+								-->
+                                <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
+								<div class="row modal-list">
+								  <div class="col-sm-3">
+								  </div>
+								  <div class="col-sm-6">
+									<ul>
+									  <li>Entity-Component-System framework</li>
+									  <li>3D Rendering system using OpenGL</li>
+									  <li>GUI system (using the rendering system)</li>
+									</ul>
+								  </div>
+								  <div class="col-sm-3">
+								  </div>
+								</div>
+
+								<p>The project is being developed and tested on Windows and Linux, but does not use any libraries that would exclude the possibility of MacOS support in the future.</p>
 								<ul class="list-inline social-buttons">
 								  <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
 								  </li>
