Improved About section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alex Khouderchah - Programmer</title>
+    <title>Alex Khouderchah - Computer Scientist</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="blog.html">Blog</a>
+                        <a class="page-scroll" href="Articles.html">Articles</a>
                     </li>
                 </ul>
             </div>
@@ -103,11 +103,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Programmer</h4>
+                                    <h4>Computer Scientist</h4>
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">My relationship with computers has been one of interminal fascination. I find both the practical and theoretical aspects of computer science to be enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
                                 </div>
                             </div>
                         </li>
@@ -121,7 +121,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                  <p class="text-muted">TODO</p>
                                 </div>
                             </div>
                         </li>
@@ -135,7 +135,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">TODO</p>
                                 </div>
                             </div>
                         </li>
@@ -149,7 +149,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                  <p class="text-muted">The creation and performance of music parallels the act of programming in the sense that both require one to be fastidious while still ensuring that the sum of all parts is well-integrated. By singing and playing the flute & saxophone, I have the pleasure of&#8213;much like programming&#8213;challenging myself while at the same time doing something inherently enjoyable.</p>
                                 </div>
                             </div>
                         </li>
@@ -163,7 +163,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">TODO</p>
                                 </div>
                             </div>
                         </li>
@@ -583,8 +583,7 @@
                                 <h2>Reliable Data-Transfer Protocol</h2>
                                 <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                                <p>This is an implementation of a class that provides an interface similar to that of the Berkeley sockets API, with the class itself providing reliable data transfer using UDP. While there are certainly similarities between this protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
