Added & updated about descriptions

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">My relationship with computers has been one of interminal fascination. I find both the practical and theoretical aspects of computer science to be enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
+                                    <p class="text-muted">My relationship with computers has been one of interminal fascination. Both the practical and theoretical aspects of computer science are enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
                                 </div>
                             </div>
                         </li>
@@ -135,7 +135,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">TODO</p>
+                                    <p class="text-muted">Exercise in some form or another has always been a part of my life. Health benefits aside, exercise serves as a constant reminder that one's limits are imposed by the mind, and that great improvement and achievement demand a willingness to go through pain. It reminds me that sustained comfort is not a sign of success, but of stagnation.</p>
                                 </div>
                             </div>
                         </li>
@@ -163,22 +163,13 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">TODO</p>
+                                    <p class="text-muted">The development of video games couples creative and technical work in a manner quite irresistible. Modding, developing, and analyzing games has taught me to concern myself not only with how to make a program work, but also how to make it auditorily & visually aesthetic, as well as captivating to use.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                           <div class="timeline-image">
 							  <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
-							<!--
-                                <h4>Be Part
-                                  <br>Of Our
-                                  <br>Story!</h4>
-							<h4>
-								What's
-								<br>next?
-							</h4>
-							-->
                           </div>
 						  <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -286,7 +277,7 @@
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Dreams</h4>
+                        <h4>TODO</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
@@ -584,7 +575,11 @@
                                 <h2>Reliable Data-Transfer Protocol</h2>
                                 <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                                <p>This is an implementation of a class that provides an interface similar to that of the Berkeley sockets API, with the class itself providing reliable data transfer using UDP. While there are certainly similarities between this protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
+                                <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
+								<ul class="list-inline social-buttons">
+								  <li><a href="http://www.github.com/Khouderchah-Alex/libRDT"><i class="fa fa-github"></i></a>
+								  </li>
+								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
