Added About description for Linux

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="text-muted">TODO</p>
+                                  <p class="text-muted">Linux has been, since I first installed it on my machine&#8213;and after learning what an MBR was and how I had broken it&#8213;a source of unending inspiration (well, <a href="https://en.wikipedia.org/wiki/File:Autoconf-automake-process.svg">not all aspects</a>). The kernel's architecture serves as inspiration for software engineering, and the open-source philosophy itself as inspiration for the licensing of code written by individual developers and companies alike.<br>...besides, where else would you find code like <a href="https://lkml.org/lkml/2007/3/9/10">this</a>?</p>
                                 </div>
                             </div>
                         </li>
@@ -149,7 +149,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="text-muted">The creation and performance of music parallels the act of programming in the sense that both require one to be fastidious while still ensuring that the sum of all parts is well-integrated. By singing and playing the flute & saxophone, I have the pleasure of&#8213;much like programming&#8213;challenging myself while at the same time doing something inherently enjoyable.</p>
+                                  <p class="text-muted">The creation and performance of music parallels the act of programming in the sense that both require one to be fastidious while still ensuring that the sum of all parts is well-integrated. By singing and playing the flute & saxophone, I have the pleasure of&#8213;much like programming&#8213;challenging myself while at the same time partaking in an activity that is inherently enjoyable.</p>
                                 </div>
                             </div>
                         </li>
@@ -277,8 +277,8 @@
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>TODO</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Borderlands Mods</h4>
+                        <p class="text-muted">Game and Level Design</p>
                     </div>
                 </div>
             </div>
