--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="text-muted">Linux has been, since I first installed it on my machine&#8213;and after learning what an MBR was and how I had broken it&#8213;a source of unending inspiration (well, <a href="https://en.wikipedia.org/wiki/File:Autoconf-automake-process.svg">not all aspects</a>). The kernel's architecture serves as inspiration for software engineering, and the open-source philosophy itself as inspiration for the licensing of code written by individual developers and companies alike.<br>...besides, where else would you find code like <a href="https://lkml.org/lkml/2007/3/9/10">this</a>?</p>
+                                  <p class="text-muted">Linux has been, since I first installed it on my machine&#8213;and after learning what an MBR was and how I had broken it&#8213;a source of unending inspiration (well, <a href="https://en.wikipedia.org/wiki/File:Autoconf-automake-process.svg">not all aspects</a>). The kernel's architecture serves as inspiration for software engineering, and the open-source philosophy itself as inspiration for the licensing of code written by individual developers and companies alike.<br>...besides, where else would you find code <a href="https://lkml.org/lkml/2007/3/9/10">like this</a>?</p>
                                 </div>
                             </div>
                         </li>
@@ -197,8 +197,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-6 col-sm-6 portfolio-item">
+                  <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+					<div class="portfolio-background">
+					</div>
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -211,8 +213,10 @@
                         <p class="text-muted">Systems and Graphics Programming</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-6 col-sm-6 portfolio-item">
+                  <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+					<div class="portfolio-background">
+					</div>
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -225,6 +229,7 @@
                         <p class="text-muted">Network Programming</p>
                     </div>
                 </div>
+				<!--
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -239,6 +244,7 @@
                         <p class="text-muted">Systems and Network Programming</p>
                     </div>
                 </div>
+				-->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -662,7 +668,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
+                                <h2>HTTP Server</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
                                 <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
@@ -691,11 +697,13 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2>Borderlands Mods</h2>
+                                <p class="item-intro text-muted">Mods (levels, missions, and guns) for Borderlands 1</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                                <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+								<ul class="list-inline social-buttons">
+								  <li><a href="mods.html"><i class="fa fa-download"></i></a>
+								  </li>
+								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
