Added borderlands portfolio preview

--- a/mods.html
+++ b/mods.html
@@ -65,7 +65,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+	<header style="background-image:url('../img/mods-bg.jpg');">
         <div class="container">
           <div class="intro-text">
 			<div class="intro-heading">Borderlands Mods</div>
