--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/borderlands.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Borderlands Mods</h4>
