Added Articles page

--- a/mods.html
+++ b/mods.html
@@ -56,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
 					<li>
-                        <a class="page-scroll" href="Articles.html">Articles</a>
+                        <a class="page-scroll" href="articles.html">Articles</a>
                     </li>
                 </ul>
             </div>
@@ -203,8 +203,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Tetrad Game Engine</h2>
-                                <p class="item-intro text-muted">3D game engine using an entity-component-system architecture</p>
+                                <h2>Dahl Headquarters</h2>
+                                <p class="item-intro text-muted">A desert-setting level containing custom missions and guns</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
 								<!--
 								<ul class="list-inline">
@@ -213,26 +213,7 @@
                                   <li>Category: Graphic Design</li>
                                 </ul>
 								-->
-                                <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
-								<div class="row modal-list">
-								  <div class="col-sm-3">
-								  </div>
-								  <div class="col-sm-6">
-									<ul>
-									  <li>Entity-Component-System framework</li>
-									  <li>3D Rendering system using OpenGL</li>
-									  <li>GUI system (using the rendering system)</li>
-									</ul>
-								  </div>
-								  <div class="col-sm-3">
-								  </div>
-								</div>
-
 								<p>The project is being developed and tested on Windows and Linux, but does not use any libraries that would exclude the possibility of MacOS support in the future.</p>
-								<ul class="list-inline social-buttons">
-								  <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
-								  </li>
-								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -256,8 +237,8 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Reliable Data-Transfer Protocol</h2>
-                                <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
+                                <h2>Vladof Motherland</h2>
+                                <p class="item-intro text-muted">A vast, frigid wasteland whose biting cold will make you reconsider death by spiderant</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
                                 <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
 								<ul class="list-inline social-buttons">
@@ -288,8 +269,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Remote Shell</h2>
-                                <p class="item-intro text-muted">Simple client and server implementation of remote shell on Linux</p>
+                                <h2>Bordershock</h2>
+                                <p class="item-intro text-muted">TODO</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
                                 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
