Music page created + article page polished

--- a/articles.html
+++ b/articles.html
@@ -94,7 +94,7 @@
                 <div class="timeline-heading">
                   <h3 class="list-hider"><a>General Programming</a><hr></h3>
 				  <div class="list-hidee">
-                    <h5 class="subheading text-muted">C/C++</h5>
+                    <h5 class="list-subheading text-muted">C/C++</h5>
 					<a>Bit Tricks and Hacks</a><br>
 				  </div>
 				  <br>
@@ -105,9 +105,9 @@
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Computer Science</a><hr></h3>
 				  <div class="list-hidee">
-					<h5 class="subheading text-muted">Algorithms & Data Structures</h5>
+					<h5 class="list-subheading text-muted">Algorithms & Data Structures</h5>
 					<a>Circular Buffer Implementation in C++</a>
-                    <h5 class="subheading text-muted">Automata & Complexity Theory</h5>
+                    <h5 class="list-subheading text-muted">Automata & Complexity Theory</h5>
 					<a>What Can't Computers Do?</a><br>
 				  </div>
 				  <br>
@@ -118,7 +118,7 @@
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Miscellaneous</a><hr></h3>
 				  <div class="list-hidee">
-					<h5 class="subheading text-muted">Recommendations</h5>
+					<h5 class="list-subheading text-muted">Recommendations</h5>
 					<a href="articles/misc/book-list.html">Book List</a><br>
 					<a href="articles/misc/music-list.html">Music List</a>
 				  </div>
@@ -136,7 +136,7 @@
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Math</a><hr></h3>
 				  <div class="list-hidee list-left">
-					<h5 class="subheading text-muted">Quaternions</h5>
+					<h5 class="list-subheading text-muted">Quaternions</h5>
 					<a>Quaternions: Part 1 - Overview</a><br>
 					<a>Quaternions: Part 2 - Details</a><br>
 				  </div>
@@ -148,11 +148,11 @@
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Tetrad Game Engine</a><hr></h3>
 				  <div class="list-hidee list-left">
-                    <h5 class="subheading text-muted">Entity-Component-System</h5>
+                    <h5 class="list-subheading text-muted">Entity-Component-System</h5>
 					<a>Entity-Component-System: Part 1 - Overview</a><br>
 					<a>Entity-Component-System: Part 2 - Basic Implementation</a><br>
 					<a>Entity-Component-System: Part 3 - Usage</a><br>
-					<h5 class="subheading text-muted">GUI System</h5>
+					<h5 class="list-subheading text-muted">GUI System</h5>
 					<a>Implementing a GUI System from scratch</a>
 				  </div>
 				  <br>
