Begun on dithering article

--- a/articles.html
+++ b/articles.html
@@ -149,9 +149,11 @@
                   <h3 class="list-hider"><a>Tetrad Game Engine</a><hr></h3>
 				  <div class="list-hidee list-left">
                     <h5 class="list-subheading text-muted">Entity-Component-System</h5>
-					<a>Entity-Component-System: Part 1 - Overview</a><br>
+					<a href="articles/tetrad/ecs-overview.html">Entity-Component-System: Part 1 - Overview</a><br>
 					<a>Entity-Component-System: Part 2 - Basic Implementation</a><br>
 					<a>Entity-Component-System: Part 3 - Usage</a><br>
+					<h5 class="list-subheading text-muted">Graphics System</h5>
+					<a href="articles/tetrad/dither-graphics.html">Dithering in Graphics</a>
 					<h5 class="list-subheading text-muted">GUI System</h5>
 					<a>Implementing a GUI System from scratch</a>
 				  </div>
