--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             <div class="row text-center">
 			  <div class="col-md-4">
 				<span class="fa-stack fa-4x">
-				  <i class="fa fa-circle fa-stack-2x text-primary"></i>
 				  <a href="http://www.github.com/Khouderchah-Alex">
+					<i class="fa fa-circle fa-stack-2x text-primary"></i>
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 				  </a>
 				</span>
@@ -333,7 +333,7 @@
                     </span>
                     <h4 class="service-heading">Email</h4>
                     <p class="text-muted">
-					  I am always on the lookout for new and interesting opportunities. Feel free to contact me!</p>
+					  I am always on the lookout for new and interesting opportunities. Feel free to contact me at alex.khouderchah@gmail.com!</p>
                 </div>
                 <div class="col-md-4">
 				  <span class="fa-stack fa-4x">
