Small updates + fixed article collapsing

--- a/articles.html
+++ b/articles.html
@@ -78,6 +78,8 @@
     </header>
 	-->
 
+    <div class="visible-md" id="xs-check"></div>
+
 	<!-- About Section -->
     <section id="articles">
         <div class="container">
@@ -93,9 +95,12 @@
 
                 <div class="timeline-heading">
                   <h3 class="list-hider"><a>General Programming</a><hr></h3>
-				  <div class="list-hidee">
+				  <div class="list-hidee collapse in">
+					<h5 class="list-subheading text-muted">Coming Soon!</h5>
+					<!--
                     <h5 class="list-subheading text-muted">C/C++</h5>
 					<a>Bit Tricks and Hacks</a><br>
+					-->
 				  </div>
 				  <br>
 				  <div class="list-spacer">
@@ -104,11 +109,14 @@
 
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Computer Science</a><hr></h3>
-				  <div class="list-hidee">
+				  <div class="list-hidee collapse in">
+					<h5 class="list-subheading text-muted">Coming Soon!</h5>
+					<!--
 					<h5 class="list-subheading text-muted">Algorithms & Data Structures</h5>
 					<a>Circular Buffer Implementation in C++</a>
                     <h5 class="list-subheading text-muted">Automata & Complexity Theory</h5>
 					<a>What Can't Computers Do?</a><br>
+					-->
 				  </div>
 				  <br>
 				  <div class="list-spacer">
@@ -117,7 +125,7 @@
 
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Miscellaneous</a><hr></h3>
-				  <div class="list-hidee">
+				  <div class="list-hidee collapse in">
 					<h5 class="list-subheading text-muted">Recommendations</h5>
 					<a href="articles/misc/book-list.html">Book List</a><br>
 					<a href="articles/misc/music-list.html">Music List</a>
@@ -135,10 +143,13 @@
 			  <div class="col-lg-5 text-center">
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Math</a><hr></h3>
-				  <div class="list-hidee list-left">
+				  <div class="list-hidee collapse in list-left">
+					<h5 class="list-subheading text-muted">Coming Soon!</h5>
+					<!--
 					<h5 class="list-subheading text-muted">Quaternions</h5>
 					<a>Quaternions: Part 1 - Overview</a><br>
 					<a>Quaternions: Part 2 - Details</a><br>
+					-->
 				  </div>
 				  <br>
 				  <div class="list-spacer">
@@ -147,15 +158,19 @@
 
 				<div class="timeline-heading">
                   <h3 class="list-hider"><a>Tetrad Game Engine</a><hr></h3>
-				  <div class="list-hidee list-left">
+				  <div class="list-hidee collapse in list-left">
                     <h5 class="list-subheading text-muted">Entity-Component-System</h5>
 					<a href="articles/tetrad/ecs-overview.html">Entity-Component-System: Part 1 - Overview</a><br>
+					<!--
 					<a>Entity-Component-System: Part 2 - Basic Implementation</a><br>
-					<a>Entity-Component-System: Part 3 - Usage</a><br>
+					<a>Entity-Component-System: Part 3 - Usage</a><br><br>
+					-->
 					<h5 class="list-subheading text-muted">Graphics System</h5>
 					<a href="articles/tetrad/dither-graphics.html">Dithering in Graphics</a>
+					<!--
 					<h5 class="list-subheading text-muted">GUI System</h5>
 					<a>Implementing a GUI System from scratch</a>
+					-->
 				  </div>
 				  <br>
 				  <div class="list-spacer">
@@ -177,7 +192,7 @@
                     <div class="timeline-panel">
                       <div class="timeline-heading">
                         <h3 class="list-hider"><a href="javascript:void(0);">Computer Science</a></h3>
-						<div class="list-hidee">
+						<div class="list-hidee collapse in">
                           <h5 class="subheading text-muted">C/C++</h5>
 						  <a>Bit Tricks and Hacks</a><br>
 						  <a>Test2</a>
@@ -195,7 +210,7 @@
                     <div class="timeline-panel">
 					  <div class="timeline-heading list-hider">
                         <h3><a href="javascript:void(0);">Math</a></h3>
-						<div class="list-hidee">
+						<div class="list-hidee collapse in">
                           <h5 class="subheading text-muted">C</h5>
 						  <a>Test</a><br>
 						  <a>Test2</a>
@@ -212,7 +227,7 @@
                     <div class="timeline-panel">
 					  <div class="timeline-heading list-hider">
                         <h3><a href="javascript:void(0);">Games</a></h3>
-						<div class="list-hidee">
+						<div class="list-hidee collapse in">
                           <h5 class="subheading text-muted">C</h5>
 						  <a>Test</a><br>
 						  <a>Test2</a>
