Updated portfolio with w3wm info

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                         <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Reliable Data-Transfer Protocol</h4>
-                        <p class="text-muted">Network Programming</p>
+                        <h4>Tiling Desktop Manager for Windows</h4>
+                        <p class="text-muted">Windows Programming</p>
                     </div>
                 </div>
 				<!--
@@ -269,8 +269,8 @@
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Simple HTTP Server</h4>
-                        <p class="text-muted">Systems and Network Programming</p>
+                        <h4>Reliable Data-Transfer Protocol</h4>
+                        <p class="text-muted">Network Programming</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -433,12 +433,12 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Reliable Data-Transfer Protocol</h2>
-                                <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
+								<h2>w3wm</h2>
+                                <p class="item-intro text-muted">Tiling desktop manager for Windows</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                                <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
+                                <p>w3wm is a project dedicated to providing Windows 7, 8, and 10 with an experience similar to that of using i3 on Linux. Windows are automatically tiled, and users can use the keyboard to navigate between, move, resize, open, and close windows. Built from the ground up with native support for multi-monitor setups and DPI-aware processes, w3wm is a desktop manager fit for the modern user who potentially has multiple monitors of high resolution.</p>
 								<ul class="list-inline social-buttons">
-								  <li><a href="http://www.github.com/Khouderchah-Alex/libRDT"><i class="fa fa-github"></i></a>
+								  <li><a href="http://www.github.com/Khouderchah-Alex/w3wm"><i class="fa fa-github"></i></a>
 								  </li>
 								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -508,7 +508,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 5 -->
+	<!-- Portfolio Modal 5 -->
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -522,12 +522,14 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <!-- Project Details Go Here -->
-                                <h2>HTTP Server</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                <h2>Reliable Data-Transfer Protocol</h2>
+                                <p class="item-intro text-muted">User-mode implementation of reliable data-transfer protocol</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
+                                <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
+								<ul class="list-inline social-buttons">
+								  <li><a href="http://www.github.com/Khouderchah-Alex/libRDT"><i class="fa fa-github"></i></a>
+								  </li>
+								</ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
