--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">My relationship with computers has been one of interminal fascination. Both the practical and theoretical aspects of computer science are enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
+                                    <p class="text-muted">My relationship with computers has been one of interminable fascination. Both the practical and theoretical aspects of computer science are enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
                                 </div>
                             </div>
                         </li>
