article: consciousness: Initial commit

--- a/articles.html
+++ b/articles.html
@@ -94,13 +94,8 @@
                 <div class="timeline-heading">
                   <h3 class="list-hider"><a>Artificial and Biological Intelligence</a><hr></h3>
                   <div class="list-hidee collapse in">
-                    <h5 class="list-subheading text-muted">Coming Soon!</h5>
-                    <!--
-                        <h5 class="list-subheading text-muted">Algorithms & Data Structures</h5>
-                        <a>Circular Buffer Implementation in C++</a>
-                        <h5 class="list-subheading text-muted">Automata & Complexity Theory</h5>
-                        <a>What Can't Computers Do?</a><br>
-                        -->
+                    <h5 class="list-subheading text-muted">Consciousness</h5>
+                    <a href="articles/ai/consciousness.html">Consciousness: Lifting the Veil</a><br>
                   </div>
                   <br>
                   <div class="list-spacer">
