articles: index: Remove sections without existing articles

--- a/articles.html
+++ b/articles.html
@@ -92,21 +92,7 @@
               <div class="col-lg-5 text-center">
 
                 <div class="timeline-heading">
-                  <h3 class="list-hider"><a>General Programming</a><hr></h3>
-                  <div class="list-hidee collapse in">
-                    <h5 class="list-subheading text-muted">Coming Soon!</h5>
-                    <!--
-                        <h5 class="list-subheading text-muted">C/C++</h5>
-                        <a>Bit Tricks and Hacks</a><br>
-                        -->
-                  </div>
-                  <br>
-                  <div class="list-spacer">
-                  </div>
-                </div>
-
-                <div class="timeline-heading">
-                  <h3 class="list-hider"><a>Computer Science</a><hr></h3>
+                  <h3 class="list-hider"><a>Artificial and Biological Intelligence</a><hr></h3>
                   <div class="list-hidee collapse in">
                     <h5 class="list-subheading text-muted">Coming Soon!</h5>
                     <!--
@@ -139,20 +125,6 @@
               </div>
 
               <div class="col-lg-5 text-center">
-                <div class="timeline-heading">
-                  <h3 class="list-hider"><a>Math</a><hr></h3>
-                  <div class="list-hidee collapse in list-left">
-                    <h5 class="list-subheading text-muted">Coming Soon!</h5>
-                    <!--
-                        <h5 class="list-subheading text-muted">Quaternions</h5>
-                        <a>Quaternions: Part 1 - Overview</a><br>
-                        <a>Quaternions: Part 2 - Details</a><br>
-                        -->
-                  </div>
-                  <br>
-                  <div class="list-spacer">
-                  </div>
-                </div>
 
                 <div class="timeline-heading">
                   <h3 class="list-hider"><a>Tetrad Game Engine</a><hr></h3>
@@ -250,7 +222,7 @@
             <div class="row">
               <hr>
               <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Alex Khouderchah 2017</span>
+                <span class="copyright">Copyright &copy; Alex Khouderchah 2020</span>
               </div>
               <div class="col-md-8">
               </div>
