article: dithering: Mark as work-in-progress

--- a/articles.html
+++ b/articles.html
@@ -131,7 +131,7 @@
                         <a>Entity-Component-System: Part 3 - Usage</a><br><br>
                         -->
                         <h5 class="list-subheading text-muted">Graphics System</h5>
-                        <a href="articles/tetrad/dither-graphics.html">Dithering in Graphics</a>
+                        <a href="articles/tetrad/dither-graphics.html">Dithering in Graphics (WIP)</a>
                         <!--
                             <h5 class="list-subheading text-muted">GUI System</h5>
                             <a>Implementing a GUI System from scratch</a>
