articles: amlang: Initial commit

--- a/articles.html
+++ b/articles.html
@@ -94,6 +94,8 @@
                 <div class="timeline-heading">
                   <h3 class="list-hider"><a>Artificial and Biological Intelligence</a><hr></h3>
                   <div class="list-hidee collapse in">
+                    <h5 class="list-subheading text-muted">Amlang</h5>
+                    <a href="articles/ai/amlang.html">Amlang: The Self-Leveraging Metasystem</a><br>
                     <h5 class="list-subheading text-muted">Consciousness</h5>
                     <a href="articles/ai/consciousness.html">Consciousness: Lifting the Veil</a><br>
                   </div>
