articles: amlang_1: Initial commit

--- a/articles.html
+++ b/articles.html
@@ -96,6 +96,7 @@
                   <div class="list-hidee collapse in">
                     <h5 class="list-subheading text-muted">Amlang</h5>
                     <a href="articles/ai/amlang_0.html">Part 0: Background</a><br>
+                    <a href="articles/ai/amlang_1.html">Part 1: Environment</a><br>
                     <h5 class="list-subheading text-muted">Consciousness</h5>
                     <a href="articles/ai/consciousness.html">Consciousness: Lifting the Veil</a><br>
                   </div>
